# PDF-READER-OS-

./: .gitignore  README.md  pdf_reader_triangle.py  pdf_reading_pacer.py  pyproject.toml  requirements-dev.txt  requirements.txt
pdf_reading_pacer/: __init__.py  __main__.py  app.py
pdf_triangle_reader/: __init__.py  __main__.py  app.py  document.py  playback.py  text_layout.py
scripts/: build_macos_onefile.sh
tests/: test_app_launcher.py  test_playback.py  test_text_layout.py
web/: index.html  main.js  styles.css
web/js/: appearance.js  bookmark-renderer.js  constants.js  dom.js  overlay-renderer.js  pdf-service.js  row-index.js  triangle-renderer.js  utils.js
web/js/annotations/: geometry.js
web/js/reader/: motion.js
web/js/state/: interaction-mode.js  pace-mode.js
