[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-triangle-reader"
version = "0.1.0"
description = "Launcher for the JavaScript PDF Triangle Reader UI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
pdf-triangle-reader = "pdf_triangle_reader.app:main"

[tool.setuptools]
packages = ["pdf_triangle_reader"]
